fixed alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@
   background-color: rgb(93, 108, 131);
   color: white;
   text-align: start;
-  padding: 5vh 10vw 5vh 10vw;
+  padding: 5vh 50px 5vh 50px;
 }
 
 .footerTextBox{
