--- a/src/components/dashboard/welcomeSection/welcomeStyle.css
+++ b/src/components/dashboard/welcomeSection/welcomeStyle.css
@@ -1,18 +1,20 @@
 /* Welcome Section */
 
 .welcomeSectionMainBox{
-  margin-top: 5vh;
+  position: relative;
+  padding-top: 10vh;
   max-width: 100vw;
 }
 
 .imageSection{
   position: relative;
+  padding-left: 10%;
 }
 
 .imageOneDiv{
   position: absolute;
   padding-top: 5%;
-  left: 20%;
+  left: 30%;
 }
 
 .imageOne{
@@ -20,26 +22,37 @@
   max-height: 70%;
 }
 .imageTwoDiv{
-  width: 50%;
-  position: absolute;
+  width: 250px;
+  position: relative;
   padding-top: 40%;
+  margin-left: 20%;
 }
 
 .imageTwo{
   max-width: 80%;
-  margin-left: 10%;
+  margin-left: 15%;
 }
 
 .triRecShape{
   position: absolute;
   margin-top: 500px;
-  display: block;
 }
 
+.triangleRecShapeContainer{
+  max-width: 180px;
+  position: relative;
+  bottom: 25%;
+  left: 60%;
+  padding: 0;
+  background-color: rgb(255, 124, 70) !important;
+  color: white;
+}
 /* Text Section */
 
 .textSection{
   position: relative;
+  padding: 0;
+  margin: 0;
 }
 
 .textSection .content{
@@ -67,16 +80,7 @@
 }
 
 /* TriRectangle Shpae */
-.talk-bubble {
-  margin-top: 55%;
-  margin-left: 55%;
-  display: inline-block;
-  position: relative;
-	max-width: 200px;
-	height: auto;
-	background-color: rgb(255, 124, 70);
-  color: white;
-}
+
 .border{
   border: 8px solid rgb(255, 124, 70);
 }
@@ -91,7 +95,7 @@
   top: -8px;
 	bottom: auto;
 	border: 32px solid;
-	border-color: rgb(255, 124, 70) transparent transparent transparent;
+	border-color: rgb(255, 124, 70) rgb(255, 124, 70) rgb(255, 124, 70) rgb(255, 124, 70);
 }
 .tri-right.left-top:after{
 	content: ' ';
@@ -150,5 +154,6 @@
 .triangleShapeContainer{
   position: absolute;
   margin-left: 10%;
-  top: 88%;
+  top: 85%;
+  padding-top: 5%;
 }
